[package]
name = "nightfall"
version = "0.1.0"
edition = "2021"

[features]
services = ["dep:twilight-cache-inmemory", "dep:twilight-http"]

[workspace]
members = [
    "./macros",
    "./example",
]

[dependencies]
async-trait = "0.1.83"
deppy = { git = "https://github.com/Instellate/deppy.git", rev = "bddbfcfd5fd4f4a1b3c524730c37664a6e986e51" }
snafu = "0.8.5"
twilight-cache-inmemory = { version = "0.15.4", optional = true }
twilight-http = { version = "0.15.4", optional = true }
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
