[package]
name = "nightfall-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
deppy = { git = "https://github.com/Instellate/deppy.git", rev = "c2e8405119d69cd001d22beee70531ac130ea725" }
deppy-macros = { git = "https://github.com/Instellate/deppy.git", rev = "c2e8405119d69cd001d22beee70531ac130ea725", package = "deppy-macros" }
nightfall = { path = "..", features = ["services"] }
nightfall-macros = { path = "../macros" }
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }

